@@ -136,6 +136,16 @@
 	(find_candidates_dom_walker::before_dom_children): Ignore stmts that
 	can throw.
 
+2017-01-30  Jeff Law  <law@redhat.com>
+
+	PR target/84064
+	* i386.c (ix86_adjust_stack_and_probe_stack_clash): New argument
+	INT_REGISTERS_SAVED.  Check it prior to calling
+	get_scratch_register_on_entry.
+	(ix86_adjust_stack_and_probe): Similarly.
+	(ix86_emit_probe_stack_range): Similarly.
+	(ix86_expand_prologue): Corresponding changes.
+
 2018-03-01  H.J. Lu  <hongjiu.lu@intel.com>
 
 	Backport from mainline
